--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "angular-notifier",
-	"description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular 2+ application.",
+	"description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular application.",
 	"version": "2.0.0",
 	"author": {
 		"name": "Dominique Müller",
@@ -31,81 +31,67 @@
 		"module",
 		"js"
 	],
-	"main": "angular-notifier.umd.js",
-	"module": "angular-notifier.es5.js",
-	"es2015": "angular-notifier.js",
-	"typings": "angular-notifier.d.ts",
+	"typings": "./angular-notifier.d.ts",
+	"main": "./bundles/angular-notifier.umd.js",
+	"module": "./esm5/angular-notifier.js",
+	"es2015": "./esm2015/angular-notifier.js",
 	"scripts": {
-		"codecov": "codecov",
-		"gulp": "gulp",
-		"webpack-dev-server": "webpack-dev-server",
-		"start": "webpack --config tools/webpack/webpack.dll.config.js --hide-modules && webpack-dev-server --config tools/webpack/webpack.dev.config.js",
-		"test": "jest --config tools/jest/jest.config.json",
-		"lint": "gulp lint",
-		"build": "gulp run",
-		"ci:automatic-release": "automatic-release",
-		"ci:post-automatic-release": "gulp env:release",
-		"ci:coverage": "codecov -f coverage/coverage-final.json",
-		"ci:test": "jest --config tools/jest/jest.config.json --runInBand --no-cache"
+		"build": "npm run build:js && npm run build:sass && npm run build:css",
+		"build:sass": "copyfiles \"src/lib/**/*.scss\" dist --up 2",
+		"build:css": "node-sass src/lib --output dist --source-map true --output-style expanded",
+		"build:js": "angular-package-builder",
+		"clean": "rimraf -r dist/**",
+		"postrelease": "copyfiles \"docs/**\" package.json CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md dist",
+		"release": "automatic-release",
+		"start": "webpack --config webpack.dll.config.js --hide-modules && webpack-dev-server --config webpack.dev.config.js",
+		"test:coverage": "codecov -f coverage/coverage-final.json",
+		"test": "jest --config jest.config.json --runInBand --no-cache"
 	},
 	"peerDependencies": {
 		"@angular/common": ">= 5.0.0 < 6.0.0",
-		"@angular/core": ">= 5.0.0 < 6.0.0"
+		"@angular/core": ">= 5.0.0 < 6.0.0",
+		"rxjs": ">= 5.5.2 < 6.0.0"
 	},
 	"devDependencies": {
-		"@angular/common": "^5.0.x",
-		"@angular/compiler-cli": "^5.0.x",
-		"@angular/compiler": "^5.0.x",
-		"@angular/core": "^5.0.x",
-		"@angular/platform-browser-dynamic": "^5.0.x",
-		"@angular/platform-browser": "^5.0.x",
+		"@angular/common": "5.1.x",
+		"@angular/compiler-cli": "5.1.x",
+		"@angular/compiler": "5.1.x",
+		"@angular/core": "5.1.x",
+		"@angular/platform-browser-dynamic": "5.1.x",
+		"@angular/platform-browser": "5.1.x",
 		"@types/jest": "21.1.x",
 		"@types/node": "8.0.x",
 		"add-asset-html-webpack-plugin": "2.1.x",
+		"angular-package-builder": "1.0.x",
 		"angular2-template-loader": "0.6.x",
 		"automatic-release": "1.1.x",
 		"awesome-typescript-loader": "3.4.x",
 		"browser-sync-webpack-plugin": "1.2.x",
 		"browser-sync": "2.18.x",
-		"classlist.js": "1.1.x",
-		"codecov": "2.2.x",
-		"codelyzer": "3.1.x",
+		"codecov": "3.0.x",
+		"copyfiles": "1.2.x",
 		"core-js": "2.5.x",
 		"css-loader": "0.28.x",
-		"del": "3.0.x",
 		"friendly-errors-webpack-plugin": "1.6.x",
-		"gulp-autoprefixer": "4.0.x",
-		"gulp-inline-ng2-template": "4.0.x",
-		"gulp-ngc": "0.3.x",
-		"gulp-rename": "1.2.x",
-		"gulp-rollup": "2.15.x",
-		"gulp-sass-lint": "1.3.x",
-		"gulp-sass": "3.1.x",
-		"gulp-sourcemaps": "2.6.x",
-		"gulp-tslint": "8.1.x",
-		"gulp-typescript": "3.2.x",
-		"gulp": "github:gulpjs/gulp#4.0",
-		"html-minifier": "3.5.x",
 		"html-webpack-plugin": "2.30.x",
-		"jest": "21.2.x",
 		"jest-preset-angular": "4.0.x",
-		"jest-zone-patch": "0.0.x",
+		"jest": "21.2.x",
+		"node-sass": "4.7.x",
 		"progress-bar-webpack-plugin": "1.10.x",
 		"raw-loader": "0.5.x",
 		"reflect-metadata": "0.1.x",
-		"rxjs": "5.5.2",
+		"rimraf": "2.6.x",
+		"rxjs": "5.5.x",
 		"sass-loader": "6.0.x",
 		"script-ext-html-webpack-plugin": "1.8.x",
 		"simple-progress-webpack-plugin": "1.0.x",
 		"source-map-loader": "0.2.x",
 		"style-loader": "0.19.x",
 		"ts-jest": "21.2.x",
-		"tslint": "5.8.x",
-		"tslint-language-service": "0.9.x",
 		"typescript": "2.4.x",
 		"web-animations-js": "2.3.x",
 		"webpack-dev-server": "2.9.x",
-		"webpack": "3.8.x",
+		"webpack": "3.10.x",
 		"zone.js": "0.8.18"
 	}
 }
