--- a/package.json
+++ b/package.json
@@ -31,67 +31,64 @@
 		"module",
 		"js"
 	],
-	"typings": "./angular-notifier.d.ts",
-	"main": "./bundles/angular-notifier.umd.js",
-	"module": "./esm5/angular-notifier.js",
-	"es2015": "./esm2015/angular-notifier.js",
 	"scripts": {
 		"build": "npm run build:js && npm run build:sass && npm run build:css",
 		"build:sass": "copyfiles \"src/lib/**/*.scss\" dist --up 2",
 		"build:css": "node-sass src/lib --output dist --source-map true --output-style expanded",
-		"build:js": "angular-package-builder",
+		"build:js": "angular-package-builder .angular-package.json",
 		"clean": "rimraf -r dist/**",
-		"postrelease": "copyfiles \"docs/**\" package.json CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md dist",
 		"release": "automatic-release",
-		"start": "webpack --config webpack.dll.config.js --hide-modules && webpack-dev-server --config webpack.dev.config.js",
+		"release:copy": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md dist",
+		"start": "webpack-dev-server --config webpack.dev.config.js",
 		"test:coverage": "codecov -f coverage/coverage-final.json",
 		"test": "jest --config jest.config.json --runInBand --no-cache"
 	},
 	"peerDependencies": {
-		"@angular/common": ">= 5.0.0 < 6.0.0",
-		"@angular/core": ">= 5.0.0 < 6.0.0",
-		"rxjs": ">= 5.5.2 < 6.0.0"
+		"@angular/common": ">= 6.0.0 < 7.0.0",
+		"@angular/core": ">= 6.0.0 < 7.0.0",
+		"rxjs": ">= 6.0.0 < 7.0.0"
 	},
 	"devDependencies": {
-		"@angular/common": "5.1.x",
-		"@angular/compiler-cli": "5.1.x",
-		"@angular/compiler": "5.1.x",
-		"@angular/core": "5.1.x",
-		"@angular/platform-browser-dynamic": "5.1.x",
-		"@angular/platform-browser": "5.1.x",
-		"@types/jest": "22.1.x",
-		"@types/node": "8.9.x",
-		"add-asset-html-webpack-plugin": "2.1.x",
-		"angular-package-builder": "1.0.x",
+		"@angular/common": "6.0.x",
+		"@angular/compiler-cli": "6.0.x",
+		"@angular/compiler": "6.0.x",
+		"@angular/core": "6.0.x",
+		"@angular/platform-browser-dynamic": "6.0.x",
+		"@angular/platform-browser": "6.0.x",
+		"@types/jest": "23.1.x",
+		"@types/node": "10.5.x",
+		"@types/web-animations-js": "2.2.x",
+		"angular-package-builder": "2.0.x",
 		"angular2-template-loader": "0.6.x",
 		"automatic-release": "1.1.x",
-		"awesome-typescript-loader": "3.5.x",
+		"awesome-typescript-loader": "5.2.x",
 		"browser-sync-webpack-plugin": "2.0.x",
-		"browser-sync": "2.23.x",
+		"browser-sync": "2.24.x",
 		"codecov": "3.0.x",
 		"copyfiles": "2.0.x",
 		"core-js": "2.5.x",
 		"css-loader": "0.28.x",
-		"friendly-errors-webpack-plugin": "1.6.x",
-		"html-webpack-plugin": "2.30.x",
-		"jest-preset-angular": "5.1.x",
-		"jest": "22.4.x",
-		"node-sass": "4.7.x",
-		"progress-bar-webpack-plugin": "1.10.x",
+		"friendly-errors-webpack-plugin": "1.7.x",
+		"html-webpack-plugin": "3.2.x",
+		"jest-preset-angular": "5.2.x",
+		"jest": "23.2.x",
+		"node-sass": "4.9.x",
+		"progress-bar-webpack-plugin": "1.11.x",
 		"raw-loader": "0.5.x",
 		"reflect-metadata": "0.1.x",
 		"rimraf": "2.6.x",
-		"rxjs": "5.5.x",
-		"sass-loader": "6.0.x",
-		"script-ext-html-webpack-plugin": "1.8.x",
-		"simple-progress-webpack-plugin": "1.0.x",
+		"rxjs": "6.2.x",
+		"sass-loader": "7.0.x",
+		"script-ext-html-webpack-plugin": "2.0.x",
+		"simple-progress-webpack-plugin": "1.1.x",
 		"source-map-loader": "0.2.x",
-		"style-loader": "0.20.x",
-		"ts-jest": "21.2.x",
-		"typescript": "2.4.x",
+		"style-loader": "0.21.x",
+		"ts-jest": "22.4.x",
+		"typescript": "2.7.x",
 		"web-animations-js": "2.3.x",
-		"webpack-dev-server": "2.9.x",
-		"webpack": "3.11.x",
-		"zone.js": "0.8.20"
+		"webpack-dev-server": "3.1.x",
+		"webpack": "4.13.x",
+		"webpack-cli": "3.0.x",
+		"zone.js": "0.8.26"
 	}
 }
