--- a/package.json
+++ b/package.json
@@ -32,63 +32,50 @@
 		"js"
 	],
 	"scripts": {
-		"build": "npm run build:js && npm run build:sass && npm run build:css",
-		"build:sass": "copyfiles \"src/lib/**/*.scss\" dist --up 2",
-		"build:css": "node-sass src/lib --output dist --source-map true --output-style expanded",
-		"build:js": "angular-package-builder .angular-package.json",
-		"clean": "rimraf -r dist/**",
+		"build:demo": "ng build angular-notifier-demo",
+		"build:library": "npm run build:library:angular && npm run build:library:sass && npm run build:library:css",
+		"build:library:angular": "ng build angular-notifier",
+		"build:library:css": "node-sass projects/angular-notifier/src --output dist/angular-notifier --output-style expanded",
+		"build:library:sass": "copyfiles \"projects/angular-notifier/src/**/*.scss\" \"dist/angular-notifier\" --up 3",
+		"release:complete": "node tools/update-package.js && copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md dist/angular-notifier",
 		"release": "automatic-release",
-		"release:copy": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md dist",
-		"release:npm": "cd dist && npm publish && cd ..",
-		"start": "webpack-dev-server --config webpack.dev.config.js",
-		"test:coverage": "codecov -f coverage/coverage-final.json",
-		"test": "jest --config jest.config.json --runInBand --no-cache"
+		"start": "ng serve angular-notifier-demo",
+		"test:library:coverage": "codecov -f coverage/coverage-final.json",
+		"test:library": "ng test angular-notifier"
 	},
 	"peerDependencies": {
-		"@angular/common": ">= 6.0.0 < 7.0.0",
-		"@angular/core": ">= 6.0.0 < 7.0.0",
+		"@angular/common": ">= 7.0.0 < 8.0.0",
+		"@angular/core": ">= 7.0.0 < 8.0.0",
 		"rxjs": ">= 6.0.0 < 7.0.0"
 	},
 	"devDependencies": {
-		"@angular/common": "6.1.x",
-		"@angular/compiler": "6.1.x",
-		"@angular/compiler-cli": "6.1.x",
-		"@angular/core": "6.1.x",
-		"@angular/platform-browser": "6.1.x",
-		"@angular/platform-browser-dynamic": "6.1.x",
-		"@types/node": "10.5.x",
+		"@angular-builders/jest": "7.4.x",
+		"@angular-devkit/build-angular": "0.13.x",
+		"@angular-devkit/build-ng-packagr": "0.13.x",
+		"@angular/cli": "7.3.x",
+		"@angular/common": "7.2.x",
+		"@angular/compiler-cli": "7.2.x",
+		"@angular/compiler": "7.2.x",
+		"@angular/core": "7.2.x",
+		"@angular/language-service": "7.2.x",
+		"@angular/platform-browser-dynamic": "7.2.x",
+		"@angular/platform-browser": "7.2.x",
+		"@types/jest": "24.0.x",
+		"@types/node": "12.11.x",
 		"@types/web-animations-js": "2.2.x",
-		"angular-package-builder": "2.0.x",
-		"angular2-template-loader": "0.6.x",
 		"automatic-release": "1.1.x",
-		"awesome-typescript-loader": "5.2.x",
-		"browser-sync": "2.24.x",
-		"browser-sync-webpack-plugin": "2.0.x",
 		"codecov": "3.0.x",
 		"copyfiles": "2.0.x",
 		"core-js": "2.5.x",
-		"css-loader": "0.28.x",
-		"friendly-errors-webpack-plugin": "1.7.x",
-		"html-webpack-plugin": "3.2.x",
-		"jest": "23.2.x",
-		"jest-preset-angular": "5.2.x",
-		"node-sass": "4.9.x",
-		"progress-bar-webpack-plugin": "1.11.x",
-		"raw-loader": "0.5.x",
-		"reflect-metadata": "0.1.x",
-		"rimraf": "2.6.x",
-		"rxjs": "6.2.x",
-		"sass-loader": "7.0.x",
-		"script-ext-html-webpack-plugin": "2.0.x",
-		"simple-progress-webpack-plugin": "1.1.x",
-		"source-map-loader": "0.2.x",
-		"style-loader": "0.21.x",
-		"ts-jest": "22.4.x",
-		"typescript": "2.7.x",
+		"jest": "24.9.x",
+		"ng-packagr": "4.2.x",
+		"node-sass": "4.12.x",
+		"rxjs": "6.5.x",
+		"ts-node": "7.0.x",
+		"tsickle": "0.34.x",
+		"tslib": "1.10.x",
+		"typescript": "3.2.x",
 		"web-animations-js": "2.3.x",
-		"webpack": "4.13.x",
-		"webpack-cli": "3.0.x",
-		"webpack-dev-server": "3.1.x",
-		"zone.js": "0.8.26"
+		"zone.js": "0.8.x"
 	}
 }
