--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,13 @@
-# Editor configuration (see http://EditorConfig.org)
+# Editor configuration, see https://editorconfig.org
+root = true
 
 [*]
 charset = utf-8
-end_of_line = crlf
-indent_size = 4
 indent_style = tab
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
