--- a/package.json
+++ b/package.json
@@ -43,39 +43,40 @@
 		"test:library:coverage": "codecov -f coverage/coverage-final.json",
 		"test:library": "ng test angular-notifier"
 	},
+	"dependencies": {
+		"tslib": "1.10.x"
+	},
 	"peerDependencies": {
-		"@angular/common": ">= 7.0.0 < 8.0.0",
-		"@angular/core": ">= 7.0.0 < 8.0.0",
+		"@angular/common": ">= 8.0.0 < 9.0.0",
+		"@angular/core": ">= 8.0.0 < 9.0.0",
 		"rxjs": ">= 6.0.0 < 7.0.0"
 	},
 	"devDependencies": {
-		"@angular-builders/jest": "7.4.x",
-		"@angular-devkit/build-angular": "0.13.x",
-		"@angular-devkit/build-ng-packagr": "0.13.x",
-		"@angular/cli": "7.3.x",
-		"@angular/common": "7.2.x",
-		"@angular/compiler-cli": "7.2.x",
-		"@angular/compiler": "7.2.x",
-		"@angular/core": "7.2.x",
-		"@angular/language-service": "7.2.x",
-		"@angular/platform-browser-dynamic": "7.2.x",
-		"@angular/platform-browser": "7.2.x",
+		"@angular-builders/jest": "8.2.x",
+		"@angular-devkit/build-angular": "0.803.x",
+		"@angular-devkit/build-ng-packagr": "0.803.x",
+		"@angular/cli": "8.3.x",
+		"@angular/common": "8.2.x",
+		"@angular/compiler-cli": "8.2.x",
+		"@angular/compiler": "8.2.x",
+		"@angular/core": "8.2.x",
+		"@angular/language-service": "8.2.x",
+		"@angular/platform-browser-dynamic": "8.2.x",
+		"@angular/platform-browser": "8.2.x",
 		"@types/jest": "24.0.x",
 		"@types/node": "12.11.x",
 		"@types/web-animations-js": "2.2.x",
 		"automatic-release": "1.1.x",
-		"codecov": "3.0.x",
-		"copyfiles": "2.0.x",
-		"core-js": "2.5.x",
+		"codecov": "3.6.x",
+		"copyfiles": "2.1.x",
 		"jest": "24.9.x",
-		"ng-packagr": "4.2.x",
+		"ng-packagr": "5.7.x",
 		"node-sass": "4.12.x",
 		"rxjs": "6.5.x",
 		"ts-node": "7.0.x",
-		"tsickle": "0.34.x",
-		"tslib": "1.10.x",
-		"typescript": "3.2.x",
+		"tsickle": "0.37.x",
+		"typescript": "3.5.x",
 		"web-animations-js": "2.3.x",
-		"zone.js": "0.8.x"
+		"zone.js": "0.9.x"
 	}
 }
