--- a/projects/angular-notifier-demo/tsconfig.app.json
+++ b/projects/angular-notifier-demo/tsconfig.app.json
@@ -4,8 +4,15 @@
 		"outDir": "../../out-tsc/app",
 		"types": []
 	},
+	"files": [
+		"src/main.ts",
+		"src/polyfills.ts"
+	],
+	"include": [
+		"src/**/*.ts"
+	],
 	"exclude": [
-		"test.ts",
-		"**/*.spec.ts"
+		"src/test.ts",
+		"src/**/*.spec.ts"
 	]
 }
