--- a/projects/angular-notifier/tsconfig.spec.json
+++ b/projects/angular-notifier/tsconfig.spec.json
@@ -1,16 +1,13 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"emitDecoratorMetadata": true,
 		"outDir": "../../out-tsc/spec",
 		"types": [
 			"jest",
 			"node"
-		],
-		"module": "commonjs"
+		]
 	},
-	"files": [
-		"src/test.ts"
-	],
 	"include": [
 		"**/*.spec.ts",
 		"**/*.d.ts"
