--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,21 @@
 		"outDir": "./dist/out-tsc",
 		"sourceMap": true,
 		"declaration": false,
-		"module": "es2015",
-		"moduleResolution": "node",
-		"emitDecoratorMetadata": true,
+		"downlevelIteration": true,
 		"experimentalDecorators": true,
+		"module": "esnext",
+		"moduleResolution": "node",
 		"importHelpers": true,
-		"target": "es5",
+		"target": "es2015",
 		"typeRoots": [
 			"node_modules/@types"
-		],
-		"types": [
-			"jest"
 		],
 		"lib": [
 			"es2018",
 			"dom"
+		],
+		"types": [
+			"jest"
 		],
 		"paths": {
 			"angular-notifier": [
@@ -29,5 +29,9 @@
 				"dist/angular-notifier/*"
 			]
 		}
+	},
+	"angularCompilerOptions": {
+		"fullTemplateTypeCheck": true,
+		"strictInjectionParameters": true
 	}
 }
