--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,12 @@
-# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
 charset = utf-8
-indent_style = tab
-indent_size = 4
+end_of_line = crlf
+indent_size = 2
+indent_style = space
 insert_final_newline = true
+max_line_length = 140
 trim_trailing_whitespace = true
 
 [*.md]
