--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "library"
   ],
   "scripts": {
-    "build:demo": "ng build angular-notifier-demo",
+    "build:demo": "ng build angular-notifier-demo --prod",
     "build:library": "rimraf -r dist && npm run build:library:angular && npm run build:library:sass && npm run build:library:css && npm run build:library:docs && npm run build:library:package",
-    "build:library:angular": "ng build angular-notifier",
+    "build:library:angular": "ng build angular-notifier --prod",
     "build:library:css": "node-sass projects/angular-notifier/src --output dist/angular-notifier --output-style expanded",
     "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular-notifier\"",
     "build:library:package": "node tools/update-package.js",
@@ -31,33 +31,29 @@
     "lint:library": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0",
     "lint:library:fix": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0 --fix",
     "start": "ng serve angular-notifier-demo",
-    "test:library:upload-coverage": "codecov -f coverage/coverage-final.json",
-    "test:library": "ng test angular-notifier"
-  },
-  "dependencies": {
-    "tslib": "1.10.x"
+    "test:library": "ng test angular-notifier",
+    "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
   "peerDependencies": {
-    "@angular/common": ">= 8.0.0 < 9.0.0",
-    "@angular/core": ">= 8.0.0 < 9.0.0",
+    "@angular/common": ">= 9.0.0 < 10.0.0",
+    "@angular/core": ">= 9.0.0 < 10.0.0",
     "rxjs": ">= 6.0.0 < 7.0.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "8.3.x",
-    "@angular-devkit/build-angular": "0.803.x",
-    "@angular-devkit/build-ng-packagr": "0.803.x",
-    "@angular/cli": "8.3.x",
-    "@angular/common": "8.2.x",
-    "@angular/compiler-cli": "8.2.x",
-    "@angular/compiler": "8.2.x",
-    "@angular/core": "8.2.x",
-    "@angular/language-service": "8.2.x",
-    "@angular/platform-browser-dynamic": "8.2.x",
-    "@angular/platform-browser": "8.2.x",
+    "@angular-builders/jest": "9.0.x",
+    "@angular-devkit/build-angular": "0.901.x",
+    "@angular-devkit/build-ng-packagr": "0.901.x",
+    "@angular/cli": "9.1.x",
+    "@angular/common": "9.1.x",
+    "@angular/compiler-cli": "9.1.x",
+    "@angular/compiler": "9.1.x",
+    "@angular/core": "9.1.x",
+    "@angular/platform-browser-dynamic": "9.1.x",
+    "@angular/platform-browser": "9.1.x",
     "@typescript-eslint/eslint-plugin": "4.17.x",
     "@typescript-eslint/parser": "4.17.x",
-    "@types/jest": "24.0.x",
-    "@types/node": "14.14.x",
+    "@types/jest": "26.0.x",
+    "@types/node": "12.11.x",
     "@types/web-animations-js": "2.2.x",
     "codecov": "3.8.x",
     "copyfiles": "2.4.x",
@@ -66,16 +62,16 @@
     "eslint-plugin-prettier": "3.3.x",
     "eslint-plugin-simple-import-sort": "7.0.x",
     "eslint": "7.21.x",
-    "jest": "24.9.x",
-    "ng-packagr": "5.7.x",
+    "jest": "26.6.x",
+    "ng-packagr": "9.0.x",
     "node-sass": "4.14.x",
     "prettier": "2.2.x",
     "rimraf": "3.0.x",
     "rxjs": "6.6.x",
     "ts-node": "9.1.x",
-    "tsickle": "0.37.x",
-    "typescript": "3.5.x",
-    "web-animations-js": "2.3.x",
-    "zone.js": "0.9.x"
+    "tslib": "1.10.x",
+    "typescript": "3.8.x",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "0.10.x"
   }
 }
