--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,18 +6,14 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
-    "types": ["jest"],
     "paths": {
-      "angular-notifier": ["dist/angular-notifier"],
-      "angular-notifier/*": ["dist/angular-notifier/*"]
+      "angular-notifier": ["dist/angular-notifier"]
     }
   },
   "angularCompilerOptions": {
