--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         registry-url: 'https://registry.npmjs.org'
     - name: Install dependencies
       run: npm ci
-    - name: Build
+    - name: Build library
       run: npm run build:library
     - name: Publish to npm
       run: npm publish ./dist/angular-notifier
