--- a/package.json
+++ b/package.json
@@ -34,22 +34,25 @@
     "test:library": "ng test angular-notifier",
     "test:library:upload-coverage": "codecov -f coverage/coverage-final.json"
   },
+  "dependencies": {
+    "tslib": "2.0.x"
+  },
   "peerDependencies": {
-    "@angular/common": ">= 9.0.0 < 10.0.0",
-    "@angular/core": ">= 9.0.0 < 10.0.0",
+    "@angular/common": ">= 10.0.0 < 11.0.0",
+    "@angular/core": ">= 10.0.0 < 11.0.0",
     "rxjs": ">= 6.0.0 < 7.0.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "9.0.x",
-    "@angular-devkit/build-angular": "0.901.x",
-    "@angular-devkit/build-ng-packagr": "0.901.x",
-    "@angular/cli": "9.1.x",
-    "@angular/common": "9.1.x",
-    "@angular/compiler-cli": "9.1.x",
-    "@angular/compiler": "9.1.x",
-    "@angular/core": "9.1.x",
-    "@angular/platform-browser-dynamic": "9.1.x",
-    "@angular/platform-browser": "9.1.x",
+    "@angular-builders/jest": "10.0.x",
+    "@angular-devkit/build-angular": "0.1002.x",
+    "@angular-devkit/build-ng-packagr": "0.1002.x",
+    "@angular/cli": "10.2.x",
+    "@angular/common": "10.2.x",
+    "@angular/compiler-cli": "10.2.x",
+    "@angular/compiler": "10.2.x",
+    "@angular/core": "10.2.x",
+    "@angular/platform-browser-dynamic": "10.2.x",
+    "@angular/platform-browser": "10.2.x",
     "@typescript-eslint/eslint-plugin": "4.17.x",
     "@typescript-eslint/parser": "4.17.x",
     "@types/jest": "26.0.x",
@@ -63,15 +66,14 @@
     "eslint-plugin-simple-import-sort": "7.0.x",
     "eslint": "7.21.x",
     "jest": "26.6.x",
-    "ng-packagr": "9.0.x",
+    "ng-packagr": "10.1.x",
     "node-sass": "4.14.x",
     "prettier": "2.2.x",
     "rimraf": "3.0.x",
     "rxjs": "6.6.x",
     "ts-node": "9.1.x",
-    "tslib": "1.10.x",
-    "typescript": "3.8.x",
-    "web-animations-js": "^2.3.2",
+    "typescript": "4.0.x",
+    "web-animations-js": "2.3.x",
     "zone.js": "0.10.x"
   }
 }
